--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+env:
+  MONGO_CONNECTION_URL: ${{ secrets.MONGO_CONNECTION_URL }}
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -49,6 +52,6 @@ jobs:
 
       - name: Deploy
         run: |
-          sed -i 's/value: "MONGO_CONNECTION_URL"/value: "${{ secrets.MONGO_CONNECTION_URL }}"/g' /etc/mongod.conf
+          sed -i 's/MONGO_CONNECTION_URL/${{ env.MONGO_CONNECTION_URL }}/g' /etc/mongod.conf
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
