--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,6 +52,6 @@ jobs:
 
       - name: Deploy
         run: |
-          sed -i s/MONGO_CONNECTION_URL/${{ env.MONGO_CONNECTION_URL }}/g deployment.yaml
+          sed -i 's/MONGO_CONNECTION_URL/${{ env.MONGO_CONNECTION_URL }}/g' deployment.yaml
           kubectl apply -f deployment.yaml
           kubectl apply -f service.yaml
