--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,9 +5,6 @@ on:
     branches:
       - master
 
-env:
-  MONGO_CONNECTION_URL: ${{ secrets.MONGO_CONNECTION_URL }}
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -52,6 +49,7 @@ jobs:
 
       - name: Deploy
         run: |
-          sed -i 's/MONGO_CONNECTION_URL/${{ env.MONGO_CONNECTION_URL }}/g' deployment.yaml
+          MONGO_CONNECTION_URL=${{ secrets.MONGO_CONNECTION_URL }}
+          sed -i "s|MONGO_CONNECTION_URL|${MONGO_CONNECTION_URL}/g" deployment.yaml
           kubectl apply -f deployment.yaml
           kubectl apply -f service.yaml
